# dev-loop

./: .gitignore  AGENTS.md  README.md  adversarial-review-findings.md  adversarial-verdict.json  config.yaml  enforce_qa_gate.py  kanban.db  master-checkpoint.json  reference-screenshot-analysis.md  steward-digest.md  steward-health.json  test-failure-analysis.md  watcher-queue.json  watcher-state.json
checkpoints/: gto-wizard-clone.json
cron/: heal-history.json  jobs.json  jobs.json.bak  jobs.json.bak2
dev-loop/: coach_memory.py  master-checkpoint.json
docs/: agent-roles.md  architecture.md  container-cheatsheet.md  cron-setup.md  e2e-infrastructure.md  grand-sie-architecture.md  observation-memory.md
memories/: MEMORY.md  USER.md
memory/: MEMORY.md.bak.1781504465  MEMORY.md.bak.1781577234  USER.md
observation_memory/: __init__.py  circuit_breaker.py  classifier.py  curator.py  index.py  schema.py  similarity.py  store.py
references/: autonomy-ladder.md
refqa/: .gitignore  README.md  __init__.py  cli.py  models.py  parser.py  pyproject.toml
refqa/refqa/: __main__.py  llm.py  runner.py
refqa/refqa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
refqa/targets/: polytopia.yaml
refqa/tests/: gto-study-preflop.yaml  url-map.json
reviews/: 2026-06-26-polytopia-difficulty-verdict.json  2026-06-26-polytopia-verdict.json
screenshots/: page-descriptions.md
scripts/: cron-healer.py  cron-healer.sh  debug_gen.py  debug_parse.py  deploy-polytopia.sh  deploy-verify.sh  escalate-stagnant-bugs.py  generate-skill-summaries.py  (+16 more)
(+5639 files in other folders)
