[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "refqa"
version = "0.1.0"
description = "Reference-Augmented Agentic QA — self-healing YAML tests with reference-based verification"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "playwright>=1.40",
]

[project.scripts]
refqa = "refqa.cli:main"

[tool.setuptools.packages.find]
include = ["refqa*"]
